Refactor notebook logging helpers

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -547,9 +547,9 @@
     "    \"failed_tables\": failed_tables,\n",
     "    }\n",
     "\n",
-    "    run_log_id = log_bronze_summary(summary=bronze_summary)\n",
+    "    run_log_id = log_summary(summary=bronze_summary, layer=\"bronze\")\n",
     "\n",
-    "    log_bronze_batch(bronze_results=bronze_results, run_log_id=run_log_id)\n",
+    "    log_batch(records=bronze_results, layer=\"bronze\", run_log_id=run_log_id)\n",
     "\n",
     "    \n",
     "    # Print summary\n",
@@ -731,7 +731,7 @@
     "    logger.info(f\"\\n📊 Logging Silver results...\")\n",
     "    \n",
     "    # Batch log\n",
-    "    log_silver_batch(silver_results)\n",
+    "    log_batch(records=silver_results, layer=\"silver\")\n",
     "    \n",
     "    # Calculate summary\n",
     "    success_count = sum(1 for r in silver_results if r['status'] == 'SUCCESS')\n",
@@ -764,7 +764,7 @@
     "        \"failed_tables\": failed_tables,\n",
     "    }\n",
     "    \n",
-    "    log_silver_summary(silver_summary)\n",
+    "    log_summary(summary=silver_summary, layer=\"silver\")\n",
     "    \n",
     "    # Print summary\n",
     "    logger.info(f\"\\n  Summary:\")\n",
