--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -416,31 +416,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_bronze_batch(bronze_results: List[Dict[str, Any]], run_log_id: str) -> None:\n",
-    "    \"\"\"\n",
-    "    Write many Bronze log records in a single batch append.\n",
-    "    \n",
-    "    Args:\n",
-    "        bronze_results: List of dicts with Bronze processing results\n",
-    "    \n",
-    "    Each record should contain:\n",
-    "        - log_id, run_id, run_ts, source, table_name, load_mode\n",
-    "        - status, rows_read, rows_written\n",
-    "        - start_time, end_time, duration_seconds\n",
-    "        - error_message, parquet_path, delta_table\n",
-    "    \"\"\"\n",
-    "    if not bronze_results:\n",
-    "        return\n",
     "\n",
+    "def _prepare_bronze_rows(bronze_results: List[Dict[str, Any]], run_log_id: str):\n",
     "    rows = []\n",
     "    for r in bronze_results:\n",
-    "        # Ensure log_id and partition_key are set\n",
     "        log_id = r.get(\"log_id\") or f\"{run_log_id}_{uuid4().hex[:8]}\"\n",
     "        partition_key = r.get(\"partition_key\") or r.get(\"run_ts\")\n",
-    "        \n",
-    "        # Truncate error message\n",
     "        error_msg = truncate_error_message(r.get(\"error_message\"))\n",
-    "        \n",
+    "\n",
     "        rows.append(\n",
     "            (\n",
     "                log_id,\n",
@@ -462,124 +445,26 @@
     "                r.get(\"delta_table\"),\n",
     "            )\n",
     "        )\n",
-    "\n",
-    "    df = spark.createDataFrame(rows, schema=bronze_processing_log_schema)\n",
-    "    \n",
-    "    (df.write\n",
-    "       .format(\"delta\")\n",
-    "       .mode(\"append\")\n",
-    "       .saveAsTable(BRONZE_LOG_TABLE_FULLNAME))\n",
-    "    \n",
-    "    logger.info(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
-    "\n",
-    "def log_bronze_summary(summary: dict) -> str:\n",
-    "    \"\"\"\n",
-    "    Write Bronze run summary.\n",
-    "\n",
-    "    Args:\n",
-    "        summary: Dict with run-level statistics.\n",
-    "\n",
-    "    Returns:\n",
-    "        Run-level log_id used to link processing log rows.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    log_id = summary.get(\"log_id\") or uuid4().hex\n",
-    "\n",
-    "    run_ts = summary[\"run_ts\"]\n",
-    "    run_id = summary.get(\"run_id\") or f\"{run_ts}_{log_id[:8]}\"\n",
-    "\n",
-    "    row = {\n",
-    "        \"log_id\":               log_id,\n",
-    "        \"run_id\":               run_id,\n",
-    "        \"run_date\":             summary[\"run_date\"],\n",
-    "        \"run_ts\":               run_ts,\n",
-    "        \"source\":               summary.get(\"source\"),\n",
-    "\n",
-    "        \"status\":               summary.get(\"status\", \"SUCCESS\"),\n",
-    "        \"run_start\":            summary[\"run_start\"],\n",
-    "        \"run_end\":              summary[\"run_end\"],\n",
-    "        \"duration_seconds\":     summary.get(\"duration_seconds\"),\n",
-    "\n",
-    "        \"total_tables\":         summary[\"total_tables\"],\n",
-    "        \"tables_success\":       summary[\"tables_success\"],\n",
-    "        \"tables_empty\":         summary[\"tables_empty\"],\n",
-    "        \"tables_failed\":        summary[\"tables_failed\"],\n",
-    "        \"tables_skipped\":       summary[\"tables_skipped\"],\n",
-    "        \"total_rows\":           summary[\"total_rows\"],\n",
-    "        \"workers\":              summary[\"workers\"],\n",
-    "\n",
-    "        \"sum_task_seconds\":     summary.get(\"sum_task_seconds\"),\n",
-    "        \"theoretical_min_sec\":  summary.get(\"theoretical_min_sec\"),\n",
-    "        \"actual_time_sec\":      summary.get(\"actual_time_sec\"),\n",
-    "        \"efficiency_pct\":       summary.get(\"efficiency_pct\"),\n",
-    "\n",
-    "        \"failed_tables\":        summary.get(\"failed_tables\"),\n",
-    "        \"error_message\":        summary.get(\"error_message\"),\n",
-    "    }\n",
-    "\n",
-    "    df = spark.createDataFrame([row], schema=bronze_run_summary_schema)\n",
-    "\n",
-    "    (\n",
-    "        df.write\n",
-    "        .format(\"delta\")\n",
-    "        .mode(\"append\")\n",
-    "        .saveAsTable(BRONZE_SUMMARY_TABLE_FULLNAME)\n",
-    "    )\n",
-    "\n",
-    "    return log_id\n",
+    "    return rows\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Bronze logging functions defined\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19",
-   "metadata": {},
-   "source": [
-    "## [9] Silver Logging Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def log_silver_batch(records: List[Dict[str, Any]]) -> None:\n",
-    "    \"\"\"\n",
-    "    Write many Silver log records in a single batch append.\n",
-    "    \n",
-    "    Args:\n",
-    "        records: List of dicts with Silver CDC merge results\n",
-    "    \n",
-    "    Each record should contain:\n",
-    "        - log_id, run_id, run_ts, source, table_name, load_mode\n",
-    "        - status, rows_inserted, rows_updated, rows_deleted, rows_unchanged\n",
-    "        - total_silver_rows, bronze_rows, bronze_table\n",
-    "        - start_time, end_time, duration_seconds\n",
-    "        - error_message, silver_table\n",
-    "    \"\"\"\n",
-    "    if not records:\n",
-    "        return\n",
-    "    \n",
+    "def _prepare_silver_rows(records: List[Dict[str, Any]]):\n",
     "    rows = []\n",
     "    for r in records:\n",
     "        run_ts = r.get(\"run_ts\")\n",
     "        if not run_ts:\n",
     "            raise ValueError(\"Silver log record is missing run_ts\")\n",
-    "        \n",
-    "        rd = r.get(\"run_date\")\n",
-    "        if rd is None:\n",
-    "            rd = build_run_date(run_ts)\n",
-    "        \n",
+    "\n",
+    "        run_date = r.get(\"run_date\")\n",
+    "        if run_date is None:\n",
+    "            run_date = build_run_date(run_ts)\n",
+    "\n",
     "        error_msg = truncate_error_message(r.get(\"error_message\"))\n",
-    "        \n",
+    "\n",
     "        rows.append(Row(\n",
     "            log_id           = r.get(\"log_id\"),\n",
     "            run_id           = r.get(\"run_id\"),\n",
-    "            run_date         = rd,\n",
+    "            run_date         = run_date,\n",
     "            run_ts           = run_ts,\n",
     "            source           = r.get(\"source\"),\n",
     "            table_name       = r.get(\"table_name\"),\n",
@@ -598,66 +483,149 @@
     "            error_message    = error_msg,\n",
     "            silver_table     = r.get(\"silver_table\"),\n",
     "        ))\n",
-    "    \n",
-    "    df = spark.createDataFrame(rows, schema=silver_log_schema)\n",
-    "    \n",
-    "    (df.write\n",
-    "       .format(\"delta\")\n",
-    "       .mode(\"append\")\n",
-    "       .saveAsTable(SILVER_LOG_TABLE_FULLNAME))\n",
-    "    \n",
-    "    logger.info(f\"✓ Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
+    "    return rows\n",
     "\n",
     "\n",
-    "def log_silver_summary(summary: Dict[str, Any]) -> None:\n",
+    "def log_batch(records: List[Dict[str, Any]], layer: str, run_log_id: Optional[str] = None) -> None:\n",
     "    \"\"\"\n",
-    "    Write Silver run summary.\n",
-    "    \n",
-    "    Args:\n",
-    "        summary: Dict with run-level CDC statistics\n",
+    "    Write many log records in a single batch append for the given layer.\n",
     "    \"\"\"\n",
-    "    run_ts = summary.get(\"run_ts\")\n",
-    "    if not run_ts:\n",
-    "        raise ValueError(\"Summary missing run_ts\")\n",
-    "    \n",
-    "    run_date = summary.get(\"run_date\")\n",
-    "    if run_date is None:\n",
-    "        run_date = build_run_date(run_ts)\n",
-    "    \n",
-    "    import json\n",
-    "    failed_tables = summary.get(\"failed_tables\", [])\n",
-    "    failed_tables_json = json.dumps(failed_tables) if failed_tables else None\n",
-    "    \n",
-    "    row = Row(\n",
-    "        run_id              = summary.get(\"run_id\"),\n",
-    "        source              = summary.get(\"source\"),\n",
-    "        run_ts              = run_ts,\n",
-    "        run_date            = run_date,\n",
-    "        run_start           = summary.get(\"run_start\"),\n",
-    "        run_end             = summary.get(\"run_end\"),\n",
-    "        duration_seconds    = summary.get(\"duration_seconds\"),\n",
-    "        total_tables        = summary.get(\"total_tables\"),\n",
-    "        tables_success      = summary.get(\"tables_success\"),\n",
-    "        tables_failed       = summary.get(\"tables_failed\"),\n",
-    "        tables_skipped      = summary.get(\"tables_skipped\"),\n",
-    "        total_inserts       = summary.get(\"total_inserts\"),\n",
-    "        total_updates       = summary.get(\"total_updates\"),\n",
-    "        total_deletes       = summary.get(\"total_deletes\"),\n",
-    "        total_unchanged     = summary.get(\"total_unchanged\"),\n",
-    "        failed_tables       = failed_tables_json,\n",
-    "    )\n",
-    "    \n",
-    "    df = spark.createDataFrame([row], schema=silver_summary_schema)\n",
-    "    \n",
+    "    if not records:\n",
+    "        return\n",
+    "\n",
+    "    layer = layer.lower()\n",
+    "    if layer == \"bronze\":\n",
+    "        if not run_log_id:\n",
+    "            raise ValueError(\"run_log_id is required for Bronze batch logging\")\n",
+    "        rows = _prepare_bronze_rows(records, run_log_id)\n",
+    "        schema = bronze_processing_log_schema\n",
+    "        table = BRONZE_LOG_TABLE_FULLNAME\n",
+    "    elif layer == \"silver\":\n",
+    "        rows = _prepare_silver_rows(records)\n",
+    "        schema = silver_log_schema\n",
+    "        table = SILVER_LOG_TABLE_FULLNAME\n",
+    "    else:\n",
+    "        raise ValueError(\"layer must be 'bronze' or 'silver'\")\n",
+    "\n",
+    "    df = spark.createDataFrame(rows, schema=schema)\n",
+    "\n",
     "    (df.write\n",
-    "       .format(\"delta\")\n",
-    "       .mode(\"append\")\n",
-    "       .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
-    "    \n",
-    "    logger.info(f\"✓ Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
+    "        .format(\"delta\")\n",
+    "        .mode(\"append\")\n",
+    "        .saveAsTable(table))\n",
+    "\n",
+    "    logger.info(f\"✓ Logged {len(records)} {layer.capitalize()} records to {table}\")\n",
     "\n",
     "\n",
-    "logger.info(\"✓ Silver logging functions defined\")"
+    "def log_summary(summary: Dict[str, Any], layer: str) -> Optional[str]:\n",
+    "    \"\"\"\n",
+    "    Write run summary for Bronze or Silver processing.\n",
+    "\n",
+    "    Returns:\n",
+    "        The Bronze run log_id for linking batch rows, or None for Silver.\n",
+    "    \"\"\"\n",
+    "    layer = layer.lower()\n",
+    "\n",
+    "    if layer == \"bronze\":\n",
+    "        log_id = summary.get(\"log_id\") or uuid4().hex\n",
+    "        run_ts = summary[\"run_ts\"]\n",
+    "        run_id = summary.get(\"run_id\") or f\"{run_ts}_{log_id[:8]}\"\n",
+    "\n",
+    "        row = {\n",
+    "            \"log_id\":               log_id,\n",
+    "            \"run_id\":               run_id,\n",
+    "            \"run_date\":             summary[\"run_date\"],\n",
+    "            \"run_ts\":               run_ts,\n",
+    "            \"source\":               summary.get(\"source\"),\n",
+    "            \"status\":               summary.get(\"status\", \"SUCCESS\"),\n",
+    "            \"run_start\":            summary[\"run_start\"],\n",
+    "            \"run_end\":              summary[\"run_end\"],\n",
+    "            \"duration_seconds\":     summary.get(\"duration_seconds\"),\n",
+    "            \"total_tables\":         summary[\"total_tables\"],\n",
+    "            \"tables_success\":       summary[\"tables_success\"],\n",
+    "            \"tables_empty\":         summary[\"tables_empty\"],\n",
+    "            \"tables_failed\":        summary[\"tables_failed\"],\n",
+    "            \"tables_skipped\":       summary[\"tables_skipped\"],\n",
+    "            \"total_rows\":           summary[\"total_rows\"],\n",
+    "            \"workers\":              summary[\"workers\"],\n",
+    "            \"sum_task_seconds\":     summary.get(\"sum_task_seconds\"),\n",
+    "            \"theoretical_min_sec\":  summary.get(\"theoretical_min_sec\"),\n",
+    "            \"actual_time_sec\":      summary.get(\"actual_time_sec\"),\n",
+    "            \"efficiency_pct\":       summary.get(\"efficiency_pct\"),\n",
+    "            \"failed_tables\":        summary.get(\"failed_tables\"),\n",
+    "            \"error_message\":        summary.get(\"error_message\"),\n",
+    "        }\n",
+    "\n",
+    "        df = spark.createDataFrame([row], schema=bronze_run_summary_schema)\n",
+    "        table = BRONZE_SUMMARY_TABLE_FULLNAME\n",
+    "\n",
+    "    elif layer == \"silver\":\n",
+    "        run_ts = summary.get(\"run_ts\")\n",
+    "        if not run_ts:\n",
+    "            raise ValueError(\"Summary missing run_ts\")\n",
+    "\n",
+    "        run_date = summary.get(\"run_date\")\n",
+    "        if run_date is None:\n",
+    "            run_date = build_run_date(run_ts)\n",
+    "\n",
+    "        import json\n",
+    "        failed_tables = summary.get(\"failed_tables\", [])\n",
+    "        failed_tables_json = json.dumps(failed_tables) if failed_tables else None\n",
+    "\n",
+    "        row = Row(\n",
+    "            run_id              = summary.get(\"run_id\"),\n",
+    "            source              = summary.get(\"source\"),\n",
+    "            run_ts              = run_ts,\n",
+    "            run_date            = run_date,\n",
+    "            run_start           = summary.get(\"run_start\"),\n",
+    "            run_end             = summary.get(\"run_end\"),\n",
+    "            duration_seconds    = summary.get(\"duration_seconds\"),\n",
+    "            total_tables        = summary.get(\"total_tables\"),\n",
+    "            tables_success      = summary.get(\"tables_success\"),\n",
+    "            tables_failed       = summary.get(\"tables_failed\"),\n",
+    "            tables_skipped      = summary.get(\"tables_skipped\"),\n",
+    "            total_inserts       = summary.get(\"total_inserts\"),\n",
+    "            total_updates       = summary.get(\"total_updates\"),\n",
+    "            total_deletes       = summary.get(\"total_deletes\"),\n",
+    "            total_unchanged     = summary.get(\"total_unchanged\"),\n",
+    "            failed_tables       = failed_tables_json,\n",
+    "        )\n",
+    "\n",
+    "        df = spark.createDataFrame([row], schema=silver_run_summary_schema)\n",
+    "        table = SILVER_SUMMARY_TABLE_FULLNAME\n",
+    "        log_id = None\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(\"layer must be 'bronze' or 'silver'\")\n",
+    "\n",
+    "    (df.write\n",
+    "        .format(\"delta\")\n",
+    "        .mode(\"append\")\n",
+    "        .saveAsTable(table))\n",
+    "\n",
+    "    logger.info(f\"✓ Logged {layer.capitalize()} summary to {table}\")\n",
+    "    return log_id\n",
+    "\n",
+    "\n",
+    "logger.info(\"✓ Logging functions defined for Bronze and Silver layers\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "## [9] Silver Logging Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger.info(\"✓ Generic log_batch/log_summary functions ready for use\")\n"
    ]
   },
   {
