--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -622,7 +622,9 @@
     "    results.append(result)\n",
     "\n",
     "# Log results in batch\n",
-    "log_bronze_batch(results)\n",
+    "bronze_summary = {...}  # build from results when ready\n",
+    "run_log_id = log_summary(bronze_summary, layer=\"bronze\")\n",
+    "log_batch(results, layer=\"bronze\", run_log_id=run_log_id)\n",
     "```"
    ]
   },
