--- a/notebooks/20_silver_cdc_merge.ipynb
+++ b/notebooks/20_silver_cdc_merge.ipynb
@@ -609,7 +609,7 @@
     "    silver_results.append(result)\n",
     "\n",
     "# Log results in batch\n",
-    "log_silver_batch(silver_results)\n",
+    "log_batch(silver_results, layer=\"silver\")\n",
     "```"
    ]
   },
