Add VS Code pytest tasks and docs

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -709,7 +709,8 @@
     "    silver_end = datetime.now(timezone.utc)\n",
     "    silver_duration = int((silver_end - silver_start).total_seconds())\n",
     "    \n",
-    "    logger.info(f\"\\n✓ Silver processing completed in {silver_duration}s\")"
+    "    logger.info(f\"\\n✓ Silver processing completed in {silver_duration}s\")\n",
+    "    sys.exit(0)"
    ]
   },
   {
