Unify Files base path detection

--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -80,6 +80,7 @@
     "from uuid import uuid4\n",
     "import os\n",
     "from modules.path_utils import build_parquet_dir\n",
+    "from modules.path_utils import get_base_path\n",
     "from pyspark.sql import functions as F\n",
     "\n",
     "import logging\n",
@@ -87,7 +88,7 @@
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
-    "logger.info(\"✓ Imports loaded\")"
+    "logger.info(\"✓ Imports loaded\")\n"
    ]
   },
   {
@@ -98,7 +99,7 @@
    "outputs": [],
    "source": [
     "# Auto-detect base path (Fabric vs Cluster)\n",
-    "# Base path voor Files/Tables gebruiken we centraal vanuit 02_utils_config\n",
+    "# Base path voor Files/Tables gebruiken we centraal vanuit modules.path_utils\n",
     "\n",
     "try:\n",
     "    # Als 02_utils_config al gedraaid heeft, staat BASE_PATH al in de globals\n",
@@ -112,32 +113,7 @@
     "    logger.info(f\"✓ Environment (bronze worker): {env_type}\")\n",
     "except NameError:\n",
     "    # Fallback zodat je 10_bronze_load ook stand-alone kunt draaien\n",
-    "    import glob\n",
-    "    import os\n",
-    "\n",
-    "    def detect_base_path() -> str:\n",
-    "        \"\"\"\n",
-    "        Zelfde logica als in 02_utils_config:\n",
-    "        1. Fabric: /lakehouse/default/Files\n",
-    "        2. Custom cluster: /data/lakehouse/**/Files\n",
-    "        3. Anders: 'Files' (relatief, bijvoorbeeld in je repo)\n",
-    "        \"\"\"\n",
-    "        # 1. Fabric\n",
-    "        fabric_path = \"/lakehouse/default/Files\"\n",
-    "        if os.path.exists(fabric_path):\n",
-    "            return fabric_path\n",
-    "\n",
-    "        # 2. Custom cluster\n",
-    "        if os.path.exists(\"/data/lakehouse\"):\n",
-    "            pattern = \"/data/lakehouse/**/Files\"\n",
-    "            matches = glob.glob(pattern, recursive=True)\n",
-    "            if matches:\n",
-    "                return sorted(matches)[0]\n",
-    "\n",
-    "        # 3. Local / relative\n",
-    "        return \"Files\"\n",
-    "\n",
-    "    BASE_PATH = detect_base_path()\n",
+    "    BASE_PATH = get_base_path()\n",
     "    env_type = (\n",
     "        \"Fabric\" if \"/lakehouse/default/Files\" in BASE_PATH\n",
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
