--- a/notebooks/11_bronze_watermark_merge.ipynb
+++ b/notebooks/11_bronze_watermark_merge.ipynb
@@ -100,24 +100,12 @@
    "outputs": [],
    "source": [
     "# Auto-detect base path (Fabric vs Local)\n",
-    "def detect_base_path() -> str:\n",
-    "    \"\"\"\n",
-    "    Auto-detect base path for Files directory.\n",
-    "    \n",
-    "    Returns:\n",
-    "        '/lakehouse/default/Files' (Fabric) or 'Files' (Local)\n",
-    "    \"\"\"\n",
-    "    fabric_path = '/lakehouse/default/Files'\n",
-    "    \n",
-    "    if os.path.exists('/lakehouse/default'):\n",
-    "        return fabric_path\n",
-    "    else:\n",
-    "        return 'Files'\n",
+    "from modules.path_utils import get_base_path\n",
     "\n",
-    "BASE_PATH = detect_base_path()\n",
+    "BASE_PATH = get_base_path()\n",
     "\n",
     "logger.info(f\"✓ Base path: {BASE_PATH}\")\n",
-    "logger.info(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
+    "logger.info(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local/Relative'}\")\n"
    ]
   },
   {
