--- a/notebooks/02_utils_config.ipynb
+++ b/notebooks/02_utils_config.ipynb
@@ -72,7 +72,8 @@
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
-    "logger.info(\"✓ Imports loaded\")"
+    "logger.info(\"✓ Imports loaded\")\n",
+    "from modules.path_utils import get_base_path\n"
    ]
   },
   {
@@ -82,50 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_base_path() -> str:\n",
-    "    \"\"\"\n",
-    "    Auto-detect base path for Files directory.\n",
-    "    \n",
-    "    Tries multiple possible locations in order:\n",
-    "    1. /lakehouse/default/Files (Microsoft Fabric)\n",
-    "    2. /data/lakehouse/*/Files (Custom cluster with mounted storage)\n",
-    "    3. Files (Relative path for local development)\n",
-    "    \n",
-    "    Returns:\n",
-    "        Absolute or relative path to Files directory\n",
-    "    \"\"\"\n",
-    "    import glob\n",
-    "    \n",
-    "    # Option 1: Microsoft Fabric\n",
-    "    fabric_path = '/lakehouse/default/Files'\n",
-    "    if os.path.exists(fabric_path):\n",
-    "        return fabric_path\n",
-    "    \n",
-    "    # Option 2: Custom cluster with mounted lakehouse storage\n",
-    "    # Pattern: /data/lakehouse/{lakehouse_name}/Files\n",
-    "    logger.info(f\"Checking for custom cluster Files directory /data/lakehouse... {os.path.exists('/data/lakehouse')}\")\n",
-    "    if os.path.exists('/data/lakehouse'):\n",
-    "        pattern = '/data/lakehouse/**/Files'\n",
-    "        matches = glob.glob(pattern, recursive=True)\n",
-    "        logger.info(f\"Detected matches for custom cluster Files directories: {matches}\")\n",
-    "        if matches:\n",
-    "            # Use first match (sorted for consistency)\n",
-    "            base = sorted(matches)[0]\n",
-    "            return base\n",
-    "    \n",
-    "    # Option 3: Relative path (local development / repository)\n",
-    "    return 'Files'\n",
-    "\n",
-    "# Set base path\\n\",\n",
+    "# Bepaal Files-basispad met de centrale helper\n",
     "if config_base_path is None:\n",
-    "    BASE_PATH = detect_base_path()\n",
+    "    BASE_PATH = get_base_path()\n",
     "else:\n",
     "    BASE_PATH = config_base_path\n",
     "\n",
     "# Detect environment type\n",
     "if BASE_PATH == '/lakehouse/default/Files':\n",
     "    env_type = 'Fabric'\n",
-    "elif BASE_PATH.startswith('/data/lakehouse/'):\n",
+    "elif '/data/lakehouse/' in BASE_PATH:\n",
     "    env_type = 'Custom Cluster'\n",
     "elif BASE_PATH.startswith('/'):\n",
     "    env_type = 'Absolute Path'\n",
@@ -133,7 +100,7 @@
     "    env_type = 'Local/Relative'\n",
     "\n",
     "logger.info(f\"✓ Base path: {BASE_PATH}\")\n",
-    "logger.info(f\"✓ Environment: {env_type}\")"
+    "logger.info(f\"✓ Environment: {env_type}\")\n"
    ]
   },
   {
