Generate config file from source metadata (#12)
Co-authored-by: Albert <datadokkie@qbids.nl>
Reviewed-on: https://git.qbids.net/albert/dwh_spark_processing/pulls/12

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -145,33 +145,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## [1.5] Initialize Spark Session\n",
+    "from modules.spark_session import get_or_create_spark_session\n",
     "\n",
-    "# Check if Spark session exists (Fabric/Databricks has it by default)\n",
-    "# For local environments, create it\n",
-    "try:\n",
-    "    spark\n",
-    "    logger.info(\"✓ Spark session already available\")\n",
-    "except NameError:\n",
-    "    logger.info(\"Creating Spark session for local environment...\")\n",
-    "    from pyspark.sql import SparkSession\n",
-    "    \n",
-    "    #todo: use spark_config.py and override spark defaults. Enable Hive support is needed.\n",
-    "    spark = SparkSession.builder \\\n",
-    "        .appName(\"DWH_Bronze_Silver_Processing\") \\\n",
-    "        .enableHiveSupport() \\\n",
-    "        .getOrCreate()\n",
-    "    \n",
-    "    logger.info(\"✓ Spark session created\")\n",
-    "\n",
-    "spark.conf.set(\"spark.sql.parquet.datetimeRebaseModeInRead\", \"CORRECTED\")\n",
-    "spark.conf.set(\"spark.sql.parquet.int96RebaseModeInRead\", \"CORRECTED\")\n",
-    "spark.conf.set(\"spark.sql.parquet.datetimeRebaseModeInWrite\", \"CORRECTED\")\n",
-    "spark.conf.set(\"spark.sql.parquet.int96RebaseModeInWrite\", \"CORRECTED\")\n",
-    "\n",
-    "# Verify Spark session\n",
-    "logger.info(f\"  Spark version: {spark.version}\")\n",
-    "logger.info(f\"  Application ID: {spark.sparkContext.applicationId}\")"
+    "spark = get_or_create_spark_session(\n",
+    "    app_name=\"DWH_Bronze_Silver_Processing\",\n",
+    "    enable_hive=True\n",
+    ")"
    ]
   },
   {
