--- a/notebooks/11_bronze_watermark_merge.ipynb
+++ b/notebooks/11_bronze_watermark_merge.ipynb
@@ -73,6 +73,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aca99896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Module fabric.bootstrap\n",
+    "# ---------------------\n",
+    "# This cell enables a flexible module loading strategy:\n",
+    "#\n",
+    "# PRODUCTION (default): The `Files/code` directory is empty. This function does nothing,\n",
+    "# and Python imports all modules from the stable, versioned Wheel in the Environment.\n",
+    "#\n",
+    "# DEVELOPMENT / HOTFIX: To bypass the 15-20 minute Fabric publish cycle for urgent fixes,\n",
+    "# upload individual .py files to `Files/code` in the Lakehouse. This function prepends\n",
+    "# that path to sys.path, so Python finds the override files first. All other modules\n",
+    "# continue to load from the Wheel - only the uploaded files are replaced.\n",
+    "#\n",
+    "# Usage: Keep `Files/code` empty for production stability. Use it only for rapid\n",
+    "# iteration during development or emergency hotfixes.\n",
+    "\n",
+    "from modules.fabric_bootstrap import ensure_module_path\n",
+    "ensure_module_path()  # Now Python can find the rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4",
    "metadata": {},
    "outputs": [],
