--- a/notebooks/99_export_delta_to_parquet.ipynb
+++ b/notebooks/99_export_delta_to_parquet.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Parameters\n",
     "delta_table = \"logs.bronze_processing_log\"  # Schema.table name\n",
@@ -24,6 +25,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Module fabric.bootstrap\n",
+    "# ---------------------\n",
+    "# This cell enables a flexible module loading strategy:\n",
+    "#\n",
+    "# PRODUCTION (default): The `Files/code` directory is empty. This function does nothing,\n",
+    "# and Python imports all modules from the stable, versioned Wheel in the Environment.\n",
+    "#\n",
+    "# DEVELOPMENT / HOTFIX: To bypass the 15-20 minute Fabric publish cycle for urgent fixes,\n",
+    "# upload individual .py files to `Files/code` in the Lakehouse. This function prepends\n",
+    "# that path to sys.path, so Python finds the override files first. All other modules\n",
+    "# continue to load from the Wheel - only the uploaded files are replaced.\n",
+    "#\n",
+    "# Usage: Keep `Files/code` empty for production stability. Use it only for rapid\n",
+    "# iteration during development or emergency hotfixes.\n",
+    "\n",
+    "from modules.fabric_bootstrap import ensure_module_path\n",
+    "ensure_module_path()  # Now Python can find the rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from modules.spark_session import get_or_create_spark_session\n",
     "\n",
@@ -34,6 +61,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Read Delta table\n",
     "df = spark.table(delta_table)\n",
@@ -46,6 +74,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Write to Parquet\n",
     "df.write.mode(mode).parquet(output_path)\n",
