--- a/notebooks/03_utils_generate_metadata.ipynb
+++ b/notebooks/03_utils_generate_metadata.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "53ae9f80",
    "metadata": {
     "tags": [
@@ -31,12 +31,12 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "#source = \"anva_concern\"\n",
+    "source = \"anva_concern\"\n",
     "#source = \"anva_meeus\"\n",
     "#source = \"ccs_level\"\n",
     "#source = \"insurance_data_im\"\n",
     "#source = \"ods_reports\"\n",
-    "source = \"vizier\"\n",
+    "#source = \"vizier\"\n",
     "\n",
     "#metadata_path = \"Files/metadata/connection_anva_concern_prod_metadata.parquet\"\n",
     "metadata_path = f\"Files/metadata/connection_{source}_prod_metadata.parquet\"\n",
@@ -45,9 +45,35 @@
     "#metadata_path = \"Files/metadata/sqlmetadata.parquet\"\n",
     "\n",
     "# Toggle: gebruik load_mode configuratie of alles snapshot\n",
-    "use_load_mode_config = True  # True = gebruik df_load_mode, False = alles snapshot\n",
+    "use_load_mode_config = False  # True = gebruik df_load_mode, False = alles snapshot\n",
     "\n",
     "log_to_console = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29dadd3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Module fabric.bootstrap\n",
+    "# ---------------------\n",
+    "# This cell enables a flexible module loading strategy:\n",
+    "#\n",
+    "# PRODUCTION (default): The `Files/code` directory is empty. This function does nothing,\n",
+    "# and Python imports all modules from the stable, versioned Wheel in the Environment.\n",
+    "#\n",
+    "# DEVELOPMENT / HOTFIX: To bypass the 15-20 minute Fabric publish cycle for urgent fixes,\n",
+    "# upload individual .py files to `Files/code` in the Lakehouse. This function prepends\n",
+    "# that path to sys.path, so Python finds the override files first. All other modules\n",
+    "# continue to load from the Wheel - only the uploaded files are replaced.\n",
+    "#\n",
+    "# Usage: Keep `Files/code` empty for production stability. Use it only for rapid\n",
+    "# iteration during development or emergency hotfixes.\n",
+    "\n",
+    "from modules.fabric_bootstrap import ensure_module_path\n",
+    "ensure_module_path()  # Now Python can find the rest"
    ]
   },
   {
@@ -63,15 +89,7 @@
    "execution_count": null,
    "id": "062ef2a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-03 08:21:09,029 [INFO] - Logfile: /data/lakehouse/gh_b_avd/lh_gh_bronze/Files/notebook_outputs/logs/path_utils_20251202_211120.log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Iterable, Dict\n",
     "from modules.logging_utils import configure_logging\n",
@@ -84,7 +102,6 @@
     "import re  \n",
     "import json \n",
     "\n",
-    "\n",
     "log_file = configure_logging(run_name=\"fabric_metadata_generator\", enable_console_logging=log_to_console)\n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
@@ -93,29 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "f7013b4b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-03 08:21:09,052 [INFO] - ✓ Using existing Spark session\n",
-      "2025-12-03 08:21:09,053 [INFO] -   Spark version: 3.5.5\n",
-      "2025-12-03 08:21:09,054 [INFO] -   Application ID: app-20251202211122-0850\n",
-      "2025-12-03 08:21:09,054 [INFO] -   Application name: Metadata_Generator\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-03 08:21:09,061 [INFO] - Detected environment: local\n",
-      "2025-12-03 08:21:09,062 [INFO] - Using mock mssparkutils for local/cluster environment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from modules.spark_session import get_or_create_spark_session\n",
     "\n",
@@ -146,103 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "99823c4a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import metadata generation utilities from module\n",
+    "from modules.metadata_utils import (\n",
+    "    make_safe_identifier,\n",
+    "    column_expression,\n",
+    "    build_base_query,\n",
+    "    load_metadata,\n",
+    "    validate_metadata\n",
+    ")\n",
     "\n",
-    "def make_safe_identifier(name: str) -> str:\n",
-    "    \"\"\"Normaliseer kolomnamen voor gebruik in Delta Lake.\"\"\"\n",
-    "    if name is None:\n",
-    "        return \"\"\n",
-    "    cleaned = re.sub(r\"[^0-9A-Za-z_ ]+\", \"\", name)\n",
-    "    cleaned = re.sub(r\"\\s+\", \"_\", cleaned.strip())\n",
-    "    if cleaned and cleaned[0].isdigit():\n",
-    "        cleaned = f\"_{cleaned}\"\n",
-    "    return cleaned or name\n",
-    "\n",
-    "\n",
-    "def column_expression(col: T.Row) -> str:\n",
-    "    dt = (col.data_type or \"\").lower()\n",
-    "    col_ref = f\"[{col.column_name}]\"\n",
-    "\n",
-    "    if dt in (\"decimal\", \"numeric\"):\n",
-    "        precision = col.numeric_precision or 38\n",
-    "        scale = col.numeric_scale or 18\n",
-    "        expr = f\"CAST({col_ref} AS decimal({precision},{scale}))\"\n",
-    "    elif dt == \"money\":\n",
-    "        expr = f\"CAST({col_ref} AS decimal(19,4))\"\n",
-    "    elif dt == \"smallmoney\":\n",
-    "        expr = f\"CAST({col_ref} AS decimal(10,4))\"\n",
-    "    elif dt == \"tinyint\":\n",
-    "        expr = f\"CAST({col_ref} AS smallint)\"\n",
-    "    elif dt in {\"smallint\", \"int\", \"bigint\", \"bit\", \"float\", \"real\"}:\n",
-    "        expr = f\"CAST({col_ref} AS {dt})\"\n",
-    "    elif dt == \"date\":\n",
-    "        expr = f\"CAST({col_ref} AS date)\"\n",
-    "    elif dt == \"datetime\":\n",
-    "        expr = f\"CAST({col_ref} AS datetime2(3))\"\n",
-    "    elif dt == \"smalldatetime\":\n",
-    "        expr = f\"CAST({col_ref} AS datetime2(0))\"\n",
-    "    elif dt == \"datetime2\":\n",
-    "        expr = f\"CAST({col_ref} AS datetime2(6))\"\n",
-    "    elif dt == \"time\":\n",
-    "        expr = f\"CONVERT(varchar(8), {col_ref}, 108)\"\n",
-    "    elif dt == \"datetimeoffset\":\n",
-    "        expr = f\"CAST(SWITCHOFFSET({col_ref}, '+00:00') AS datetime2(6))\"\n",
-    "    elif dt in {\"char\", \"varchar\", \"nchar\", \"nvarchar\"}:\n",
-    "        expr = col_ref\n",
-    "    elif dt == \"text\":\n",
-    "        expr = f\"CONVERT(varchar(max), {col_ref})\"\n",
-    "    elif dt == \"ntext\":\n",
-    "        expr = f\"CONVERT(nvarchar(max), {col_ref})\"\n",
-    "    elif dt == \"uniqueidentifier\":\n",
-    "        expr = f\"CONVERT(varchar(36), {col_ref})\"\n",
-    "    elif dt == \"xml\":\n",
-    "        expr = f\"CONVERT(nvarchar(max), {col_ref})\"\n",
-    "    else:\n",
-    "        expr = col_ref\n",
-    "\n",
-    "    alias = make_safe_identifier(col.column_name)\n",
-    "    return f\"{expr} AS [{alias}]\"\n",
-    "\n",
-    "\n",
-    "def build_base_query(schema_name: str, table_name: str, columns):\n",
-    "    ordered_cols = sorted(columns, key=lambda r: r.ordinal_position or 0)\n",
-    "    select_parts = [column_expression(col) for col in ordered_cols]\n",
-    "    select_clause = \",\".join(select_parts)\n",
-    "    \n",
-    "    return f\"SELECT {select_clause} FROM [{schema_name}].[{table_name}]\"\n",
-    "\n",
-    "\n",
-    "def load_metadata(path: str):\n",
-    "    #df = spark.read.parquet(path)\n",
-    "    #return df.filter(df[\"obj_name\"].isNotNull())\n",
-    "    return spark.read.parquet(path).filter(F.col(\"obj_name\").isNotNull())\n",
-    "\n",
-    "\n",
-    "def validate_metadata(df):\n",
-    "    required_cols = [\n",
-    "        \"server_name\", \"db_name\", \"obj_name\", \"column_name\"\n",
-    "    ]\n",
-    "    \n",
-    "    # Check missing columns\n",
-    "    missing = [c for c in required_cols if c not in df.columns]\n",
-    "    if missing:\n",
-    "        raise ValueError(f\"Required columns are missing: {', '.join(missing)}\")\n",
-    "    \n",
-    "    # Check for nulls in ONE query instead of 4 separate count() calls\n",
-    "    null_checks = [F.sum(F.when(F.col(c).isNull(), 1).otherwise(0)).alias(f\"{c}_nulls\") \n",
-    "                   for c in required_cols]\n",
-    "    \n",
-    "    null_counts = df.select(null_checks).first()\n",
-    "    \n",
-    "    emptycols = [c for c in required_cols if null_counts[f\"{c}_nulls\"] > 0]\n",
-    "    if emptycols:\n",
-    "        raise ValueError(f\"Required columns contain empty values: {', '.join(emptycols)}\")\n",
-    "    \n",
-    "    return df\n"
+    "logger.info(\"✓ Metadata generation functions imported from modules.metadata_utils\")"
    ]
   },
   {
@@ -255,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "15df4429",
    "metadata": {},
    "outputs": [],
@@ -402,27 +318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "457d3003",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-03 08:21:10,213 [INFO] - Detected cluster Files path: /data/lakehouse/gh_b_avd/lh_gh_bronze/Files\n",
-      "2025-12-03 08:21:10,214 [INFO] - Resolved metadata path: /data/lakehouse/gh_b_avd/lh_gh_bronze/Files/metadata/connection_vizier_prod_metadata.parquet\n",
-      "2025-12-03 08:21:10,371 [INFO] - Loaded metadata records: 568\n",
-      "2025-12-03 08:21:10,629 [INFO] - Filtered metadata records for source 'vizier': 568\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resolve metadata path to correct environment-specific location\n",
     "resolved_metadata_path = resolve_files_path(metadata_path, spark)\n",
     "logger.info(f\"Resolved metadata path: {resolved_metadata_path}\")\n",
     "\n",
-    "metadata_df = validate_metadata(load_metadata(resolved_metadata_path))\n",
+    "metadata_df = validate_metadata(load_metadata(spark, resolved_metadata_path))\n",
     "logger.info(f\"Loaded metadata records: {metadata_df.count()}\")\n",
     "\n",
     "source_mapping = df_sources.filter(F.col(\"Bron\") == F.lit(source))\n",
@@ -455,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "35c667ed",
    "metadata": {},
    "outputs": [],
@@ -492,18 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "b8915c48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-03 08:21:10,945 [INFO] - Using load_mode configuration from df_load_mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build tables DataFrame - conditionally join df_load_mode based on toggle\n",
     "tables = base_query_df.alias(\"bq\")\n",
@@ -598,21 +495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "0c90df53",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-03 08:21:12,225 [INFO] - Detected cluster Files path: /data/lakehouse/gh_b_avd/lh_gh_bronze/Files\n",
-      "2025-12-03 08:21:12,247 [INFO] - Metadata JSON geschreven naar Files/config/vizier_metadata.json\n",
-      "2025-12-03 08:21:12,247 [INFO] -   Tables: 19\n",
-      "2025-12-03 08:21:12,248 [INFO] -   JSON size: 28339 bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def table_record(row: T.Row) -> Dict[str, object]:\n",
     "    record = {\n",
@@ -670,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dwh-spark-processing (3.12.12)",
+   "display_name": "dwh-spark-processing (3.11.8)",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
