--- a/notebooks/98_analyze_worker_optimization.ipynb
+++ b/notebooks/98_analyze_worker_optimization.ipynb
@@ -26,6 +26,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Module fabric.bootstrap\n",
+    "# ---------------------\n",
+    "# This cell enables a flexible module loading strategy:\n",
+    "#\n",
+    "# PRODUCTION (default): The `Files/code` directory is empty. This function does nothing,\n",
+    "# and Python imports all modules from the stable, versioned Wheel in the Environment.\n",
+    "#\n",
+    "# DEVELOPMENT / HOTFIX: To bypass the 15-20 minute Fabric publish cycle for urgent fixes,\n",
+    "# upload individual .py files to `Files/code` in the Lakehouse. This function prepends\n",
+    "# that path to sys.path, so Python finds the override files first. All other modules\n",
+    "# continue to load from the Wheel - only the uploaded files are replaced.\n",
+    "#\n",
+    "# Usage: Keep `Files/code` empty for production stability. Use it only for rapid\n",
+    "# iteration during development or emergency hotfixes.\n",
+    "\n",
+    "from modules.fabric_bootstrap import ensure_module_path\n",
+    "ensure_module_path()  # Now Python can find the rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from modules.spark_session import get_or_create_spark_session\n",
     "import pyspark.sql.functions as F\n",
     "\n",
@@ -321,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dwh-spark-processing (3.12.12)",
+   "display_name": "dwh-spark-processing (3.11.8)",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
