Fixed issue case sensitive joins

--- a/notebooks/03_utils_generate_metadata.ipynb
+++ b/notebooks/03_utils_generate_metadata.ipynb
@@ -402,48 +402,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build tables DataFrame - conditionally join df_load_mode based on toggle\n",
-    "tables = base_query_df.alias(\"bq\")\n",
+    "# Helper functie voor case-insensitive joins\n",
+    "def normalize_keys(df):\n",
+    "    \"\"\"Normaliseert de Bron, schema_name en obj_name kolommen.\"\"\"\n",
+    "    return df.withColumn(\"join_key_bronze\", F.lower(F.trim(F.col(\"Bron\")))) \\\n",
+    "             .withColumn(\"join_key_schema\", F.lower(F.trim(F.col(\"schema_name\")))) \\\n",
+    "             .withColumn(\"join_key_obj\", F.lower(F.trim(F.col(\"obj_name\"))))\n",
     "\n",
-    "# Always join these\n",
+    "# 1. Bereid de basis tabel voor (metadata)\n",
+    "# We gebruiken 'bq' als alias zodat we later expliciet deze kolommen kunnen kiezen\n",
+    "tables = normalize_keys(base_query_df).alias(\"bq\")\n",
+    "\n",
+    "# 2. Bereid de altijd-nodige config tabellen voor\n",
+    "df_dis_norm = normalize_keys(df_disabled_tables).alias(\"dis\")\n",
+    "df_sz_norm = normalize_keys(df_size_class).alias(\"sz\")\n",
+    "df_ex_norm = normalize_keys(df_excluded_tables).alias(\"ex\")\n",
+    "\n",
+    "# Definieer de sleutels waarop we joinen\n",
+    "join_keys = [\"join_key_bronze\", \"join_key_schema\", \"join_key_obj\"]\n",
+    "\n",
+    "# 3. Voer de standaard joins uit\n",
     "tables = (\n",
     "    tables\n",
-    "    .join(df_disabled_tables.alias(\"dis\"), [\"Bron\", \"schema_name\", \"obj_name\"], \"left\")\n",
-    "    .join(df_size_class.alias(\"sz\"), [\"Bron\", \"schema_name\", \"obj_name\"], \"left\")\n",
+    "    .join(df_dis_norm, join_keys, \"left\")\n",
+    "    .join(df_sz_norm, join_keys, \"left\")\n",
+    "    .join(df_ex_norm, join_keys, \"left\")\n",
     ")\n",
     "\n",
-    "# Conditionally join load_mode configuration\n",
+    "# 4. Conditionele joins voor Load Mode configuratie\n",
     "if use_load_mode_config:\n",
     "    logger.info(\"Using load_mode configuration from df_load_mode\")\n",
+    "    df_lm_norm = normalize_keys(df_load_mode).alias(\"lm\")\n",
+    "    df_wnd_norm = normalize_keys(df_window_config).alias(\"wnd\")\n",
+    "    \n",
     "    tables = (\n",
     "        tables\n",
-    "        .join(df_load_mode.alias(\"lm\"), [\"Bron\", \"schema_name\", \"obj_name\"], \"left\")\n",
-    "        .join(df_window_config.alias(\"wnd\"), [\"Bron\", \"schema_name\", \"obj_name\"], \"left\")\n",
+    "        .join(df_lm_norm, join_keys, \"left\")\n",
+    "        .join(df_wnd_norm, join_keys, \"left\")\n",
     "    )\n",
     "else:\n",
     "    logger.info(\"Load_mode toggle OFF - all tables will use 'snapshot' mode\")\n",
     "\n",
-    "# Always join excluded tables\n",
-    "tables = tables.join(df_excluded_tables.alias(\"ex\"), [\"Bron\", \"schema_name\", \"obj_name\"], \"left\")\n",
-    "\n",
-    "# Apply transformations\n",
+    "# 5. Pas logica toe (Enabled / Size / Excluded) en ruim op\n",
     "tables = (\n",
     "    tables\n",
+    "    .drop(*join_keys)  # Verwijder de hulp-kolommen\n",
     "    .withColumn(\"enabled\", F.when(F.col(\"dis.obj_name\").isNull(), F.lit(True)).otherwise(F.lit(False)))\n",
     "    .withColumn(\"size_class\", F.when(F.col(\"sz.size_class\").isNull(), F.lit(\"S\")).otherwise(F.col(\"sz.size_class\")))\n",
     "    .withColumn(\"excluded\", F.when(F.col(\"ex.excluded\").isNull(), F.lit(0)).otherwise(F.col(\"ex.excluded\")))\n",
     ")\n",
     "\n",
-    "# Conditionally set load_mode\n",
+    "# 6. Finale Selectie en Load Mode logica\n",
     "if use_load_mode_config:\n",
+    "    # Bepaal load_mode uit config (fallback naar snapshot)\n",
     "    tables = tables.withColumn(\"load_mode\", \n",
     "        F.when(F.col(\"lm.load_mode\").isNull(), F.lit(\"snapshot\")).otherwise(F.col(\"lm.load_mode\"))\n",
     "    )\n",
-    "    # Select with load_mode columns\n",
+    "    \n",
+    "    # Selecteer de specifieke kolommen uit de config-joins\n",
     "    tables = tables.select(\n",
     "        F.col(\"bq.obj_name\").alias(\"name\"),\n",
-    "        \"schema_name\",\n",
-    "        \"Bron\",\n",
+    "        F.col(\"bq.schema_name\"),  # Gebruik expliciet bq.* om ambiguïteit te voorkomen\n",
+    "        F.col(\"bq.Bron\"),\n",
     "        \"enabled\",\n",
     "        \"size_class\",\n",
     "        \"load_mode\",\n",
@@ -456,14 +476,14 @@
     "        \"excluded\",\n",
     "    )\n",
     "else:\n",
-    "    # All snapshot - no filter_column or window config\n",
+    "    # Forceer snapshot en zet config kolommen op NULL\n",
     "    tables = (\n",
     "        tables\n",
     "        .withColumn(\"load_mode\", F.lit(\"snapshot\"))\n",
     "        .select(\n",
     "            F.col(\"bq.obj_name\").alias(\"name\"),\n",
-    "            \"schema_name\",\n",
-    "            \"Bron\",\n",
+    "            F.col(\"bq.schema_name\"),\n",
+    "            F.col(\"bq.Bron\"),\n",
     "            \"enabled\",\n",
     "            \"size_class\",\n",
     "            \"load_mode\",\n",
@@ -477,7 +497,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "# Filter and order\n",
+    "# 7. Filter en sorteer\n",
     "tables = (\n",
     "    tables\n",
     "    .filter(F.col(\"excluded\") == 0)\n",
