--- a/notebooks/03_utils_generate_metadata.ipynb
+++ b/notebooks/03_utils_generate_metadata.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "53ae9f80",
    "metadata": {
     "tags": [
@@ -52,10 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "29dadd3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Module fabric.bootstrap\n",
     "# ---------------------\n",
@@ -86,10 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "062ef2a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:12:50,381 [INFO] - Logfile: /data/lakehouse/gh_b_avd/lh_gh_bronze/Files/notebook_outputs/logs/fabric_metadata_generator_20251209_091250.log\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import Iterable, Dict\n",
     "from modules.logging_utils import configure_logging\n",
@@ -110,10 +129,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f7013b4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:12:50,387 [INFO] - Creating new Spark session for local/cluster environment...\n",
+      "2025-12-09 09:12:50,389 [INFO] -   - Hive support enabled\n",
+      "2025-12-09 09:12:50,390 [INFO] -   - Detection: Local/Cluster environment detected\n",
+      "2025-12-09 09:12:50,391 [INFO] -   - Python VENV gevonden: /home/sparkadmin/source/repos/dwh_spark_processing/.venv/bin/python\n",
+      "2025-12-09 09:12:50,400 [INFO] -   - Modules gezipt voor distributie: /tmp/dwh_modules_package.zip\n",
+      "25/12/09 09:12:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/12/09 09:12:51 WARN StandaloneSchedulerBackend: Dynamic allocation enabled without spark.executor.cores explicitly set, you may get more executors allocated than expected. It's recommended to set spark.executor.cores explicitly. Please check SPARK-30299 for more details.\n",
+      "2025-12-09 09:12:52,700 [INFO] -   Spark version: 3.5.5\n",
+      "2025-12-09 09:12:52,702 [INFO] -   Application ID: app-20251209091251-0009\n",
+      "2025-12-09 09:12:52,704 [INFO] -   Application name: Metadata_Generator\n",
+      "2025-12-09 09:12:52,883 [INFO] - Detected environment: local\n",
+      "2025-12-09 09:12:52,884 [INFO] - Using mock mssparkutils for local/cluster environment\n"
+     ]
+    }
+   ],
    "source": [
     "from modules.spark_session import get_or_create_spark_session\n",
     "\n",
@@ -147,7 +187,15 @@
    "execution_count": null,
    "id": "99823c4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:12:53,754 [INFO] - ✓ Metadata generation functions imported from modules.metadata_utils\n"
+     ]
+    }
+   ],
    "source": [
     "# Import metadata generation utilities from module\n",
     "from modules.metadata_utils import (\n",
@@ -158,7 +206,7 @@
     "    validate_metadata\n",
     ")\n",
     "\n",
-    "logger.info(\"✓ Metadata generation functions imported from modules.metadata_utils\")"
+    "logger.info(\"Metadata generation functions imported from modules.metadata_utils\")"
    ]
   },
   {
@@ -171,25 +219,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "15df4429",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:12:55,101 [INFO] - Loading config from: sources.json\n",
+      "2025-12-09 09:12:56,412 [INFO] - Loading config from: disabled_tables.json\n",
+      "2025-12-09 09:12:57,272 [INFO] - Loading config from: size_class.json\n",
+      "2025-12-09 09:12:58,164 [INFO] - Loading config from: load_mode.json\n",
+      "2025-12-09 09:12:59,033 [INFO] - Loading config from: window_config.json\n",
+      "2025-12-09 09:12:59,960 [INFO] - Loading config from: excluded_tables.json\n",
+      "2025-12-09 09:12:59,974 [INFO] - ✓ All configuration files loaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
+    "# --- CONFIGURATIE SCHEMA DEFINITIES ---\n",
     "sources_schema = T.StructType([\n",
     "    T.StructField(\"Bron\", T.StringType(), False),\n",
     "    T.StructField(\"Server\", T.StringType(), False),\n",
     "    T.StructField(\"Database\", T.StringType(), False),\n",
     "])\n",
-    "\n",
-    "df_sources = spark.createDataFrame([\n",
-    "    (\"ccs_level\", \"vmdwhidpweu01\", \"InsuranceData_CCS_DWH\"),\n",
-    "    (r\"anva_meeus\", r\"vmdwhidpweu01\\MEEUS\", \"InsuranceData_ANVA_DWH\"),\n",
-    "    (\"vizier\", \"viz-sql01-mi-p.1d57ac4f4d63.database.windows.net\", \"CRM_DWH\"),\n",
-    "    (\"ods_reports\", \"vmdwhodsanvpweu\", \"OG_ODS_Reports\"),\n",
-    "    (\"anva_concern\", \"vmdwhidpweu01\", \"InsuranceData_ANVA_DWH\"),\n",
-    "    (\"insurance_data_im\", \"vmdwhidpweu01\", \"InsuranceData_OpGroen_DWH\"),\n",
-    "], schema=sources_schema)\n",
     "\n",
     "_disabled_schema = T.StructType([\n",
     "    T.StructField(\"Bron\", T.StringType(), False),\n",
@@ -197,54 +251,12 @@
     "    T.StructField(\"obj_name\", T.StringType(), False),\n",
     "])\n",
     "\n",
-    "df_disabled_tables = spark.createDataFrame([\n",
-    "    (\"anva_concern\", \"dbo\", \"Jobmonitor\"),\n",
-    "    (\"anva_concern\", \"dbo\", \"LaatsteVerversing\"),\n",
-    "    (\"anva_concern\", \"dbo\", \"Metadata\"),\n",
-    "    (\"anva_concern\", \"dbo\", \"VrijeLabels\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_Clausules\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_CodesDekking\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_CodesNAW\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_CodesPolis\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_LabelDekking\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_LabelNAW\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_LabelPolis\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_NAWDetails\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_NAWLabels\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_PolisDetails\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_PolisLabels\"),\n",
-    "    (\"anva_concern\", \"pbi\", \"Nulmeting_Voorwaarden\"),\n",
-    "    (\"anva_meeus\", \"dbo\", \"Jobmonitor\"),\n",
-    "    (\"anva_meeus\", \"dbo\", \"LaatsteVerversing\"),\n",
-    "    (\"anva_meeus\", \"dbo\", \"Metadata\"),\n",
-    "    (\"anva_meeus\", \"dbo\", \"VrijeLabels\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_Clausules\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_CodesDekking\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_CodesNAW\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_CodesPolis\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_LabelDekking\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_LabelNAW\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_LabelPolis\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_NAWDetails\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_NAWLabels\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_PolisDetails\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_PolisLabels\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Nulmeting_Voorwaarden\"),\n",
-    "], schema=_disabled_schema)\n",
-    "\n",
     "size_schema = T.StructType([\n",
     "    T.StructField(\"Bron\", T.StringType(), False),\n",
     "    T.StructField(\"schema_name\", T.StringType(), False),\n",
     "    T.StructField(\"obj_name\", T.StringType(), False),\n",
     "    T.StructField(\"size_class\", T.StringType(), False),\n",
     "])\n",
-    "\n",
-    "df_size_class = spark.createDataFrame([\n",
-    "    (\"anva_concern\", \"pbi\", \"Fact_PremieFacturen\", \"L\"),\n",
-    "    (\"ccs_level\", \"pbi\", \"Fact_PremieBoekingen\", \"L\"),\n",
-    "    (\"geintegreerd_model\", \"pbi\", \"Fact_PremieFacturen\", \"L\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Fact_PremieFacturen\", \"L\"),\n",
-    "], schema=size_schema)\n",
     "\n",
     "load_schema = T.StructType([\n",
     "    T.StructField(\"Bron\", T.StringType(), False),\n",
@@ -255,30 +267,6 @@
     "    T.StructField(\"kind\", T.StringType(), True),\n",
     "])\n",
     "\n",
-    "df_load_mode = spark.createDataFrame([\n",
-    "    (\"anva_concern\", \"pbi\", \"Fact_PremieFacturen\", \"window\", \"Boek_Datum\", \"datetime\"),\n",
-    "    (\"ccs_level\", \"pbi\", \"Fact_PremieBoekingen\", \"window\", \"Boek_Datum\", \"datetime\"),\n",
-    "    (\"geintegreerd_model\", \"pbi\", \"Fact_PremieFacturen\", \"window\", \"Boek_Datum\", \"datetime\"),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Fact_PremieFacturen\", \"window\", \"Boek_Datum\", \"datetime\"),\n",
-    "    (\"vizier\", \"dbo\", \"Relaties\", \"incremental\", \"Updatedatum\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Contactpersonen\", \"incremental\", \"Upd_dt\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Sleutels\", \"incremental\", \"upd\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Polissen\", \"incremental\", \"upd_dt\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Schades\", \"incremental\", \"upd_dt\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"DnB\", \"incremental\", \"upd_dt\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Contactmomenten\", \"incremental\", \"Upd\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Taken\", \"incremental\", \"upd\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Sales\", \"incremental\", \"UPD_DT\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Retenties\", \"incremental\", \"UPD_DT\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Adresbeeld\", \"incremental\", \"UPD_DT\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"UBO_Onderzoeken\", \"incremental\", \"UPD_DT\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Producten\", \"incremental\", \"upd\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Medewerkers\", \"incremental\", \"id_upd\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Klachten\", \"incremental\", \"upd_dt\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Verkoopkansen\", \"incremental\", \"upd\", \"stamp17\"),\n",
-    "    (\"vizier\", \"dbo\", \"Interesses\", \"incremental\", \"UPD_DT\", \"stamp17\"),\n",
-    "], schema=load_schema)\n",
-    "\n",
     "window_schema = T.StructType([\n",
     "    T.StructField(\"Bron\", T.StringType(), False),\n",
     "    T.StructField(\"schema_name\", T.StringType(), False),\n",
@@ -288,13 +276,6 @@
     "    T.StructField(\"lookback_months\", T.IntegerType(), False),\n",
     "])\n",
     "\n",
-    "df_window_config = spark.createDataFrame([\n",
-    "    (\"anva_concern\", \"pbi\", \"Fact_PremieFacturen\", \"Boek_Datum\", \"month\", 12),\n",
-    "    (\"geintegreerd_model\", \"pbi\", \"Fact_PremieFacturen\", \"Boek_Datum\", \"month\", 12),\n",
-    "    (\"anva_meeus\", \"pbi\", \"Fact_PremieFacturen\", \"Boek_Datum\", \"month\", 12),\n",
-    "    (\"ccs_level\", \"pbi\", \"Fact_PremieBoekingen\", \"Boek_Datum\", \"month\", 12),\n",
-    "], schema=window_schema)\n",
-    "\n",
     "excluded_schema = T.StructType([\n",
     "    T.StructField(\"Bron\", T.StringType(), False),\n",
     "    T.StructField(\"schema_name\", T.StringType(), False),\n",
@@ -302,10 +283,29 @@
     "    T.StructField(\"excluded\", T.IntegerType(), False),\n",
     "])\n",
     "\n",
-    "df_excluded_tables = spark.createDataFrame([\n",
-    "    (\"vizier\", \"dbo\", \"BO_sleutels_Wim_Verheijen\", 1),\n",
-    "    (\"vizier\", \"dbo\", \"UMG_Historie\", 1),\n",
-    "], schema=excluded_schema)"
+    "# --- JSON LOADER FUNCTIE ---\n",
+    "def load_config_table(filename: str, schema: T.StructType):\n",
+    "    \"\"\"Laadt een JSON configuratiebestand of geeft een lege DataFrame terug bij fouten.\"\"\"\n",
+    "    try:\n",
+    "        # Pad oplossen (werkt voor Fabric en Lokaal)\n",
+    "        file_path = resolve_files_path(f\"Files/config/definitions/{filename}\", spark)\n",
+    "        \n",
+    "        # Lezen met multiline optie voor leesbaarheid van JSON\n",
+    "        logger.info(f\"Loading config from: {filename}\")\n",
+    "        return spark.read.schema(schema).option(\"multiline\", \"true\").option(\"mode\", \"PERMISSIVE\").json(file_path)\n",
+    "    except Exception as e:\n",
+    "        logger.warning(f\"Unable to load {filename} (or file does not exist): {e}\")\n",
+    "        return spark.createDataFrame([], schema)\n",
+    "\n",
+    "# --- CONFIGURATIE INLEZEN ---\n",
+    "df_sources = load_config_table(\"sources.json\", sources_schema)\n",
+    "df_disabled_tables = load_config_table(\"disabled_tables.json\", _disabled_schema)\n",
+    "df_size_class = load_config_table(\"size_class.json\", size_schema)\n",
+    "df_load_mode = load_config_table(\"load_mode.json\", load_schema)\n",
+    "df_window_config = load_config_table(\"window_config.json\", window_schema)\n",
+    "df_excluded_tables = load_config_table(\"excluded_tables.json\", excluded_schema)\n",
+    "\n",
+    "logger.info(\"✓ All configuration files loaded successfully.\")"
    ]
   },
   {
@@ -318,10 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "457d3003",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:13:00,810 [INFO] - Resolved metadata path: /data/lakehouse/gh_b_avd/lh_gh_bronze/Files/metadata/connection_anva_concern_prod_metadata.parquet\n",
+      "2025-12-09 09:13:03,208 [INFO] - Loaded metadata records: 1557                  \n",
+      "2025-12-09 09:13:03,998 [INFO] - Filtered metadata records for source 'anva_concern': 1557\n"
+     ]
+    }
+   ],
    "source": [
     "# Resolve metadata path to correct environment-specific location\n",
     "resolved_metadata_path = resolve_files_path(metadata_path, spark)\n",
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35c667ed",
    "metadata": {},
    "outputs": [],
@@ -397,10 +407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b8915c48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:13:04,839 [INFO] - Load_mode toggle OFF - all tables will use 'snapshot' mode\n"
+     ]
+    }
+   ],
    "source": [
     "# Helper functie voor case-insensitive joins\n",
     "def normalize_keys(df):\n",
@@ -515,10 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0c90df53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-09 09:13:06,833 [INFO] - Metadata JSON geschreven naar Files/config/anva_concern_metadata.json\n",
+      "2025-12-09 09:13:06,835 [INFO] -   Tables: 84\n",
+      "2025-12-09 09:13:06,836 [INFO] -   JSON size: 99879 bytes\n"
+     ]
+    }
+   ],
    "source": [
     "def table_record(row: T.Row) -> Dict[str, object]:\n",
     "    record = {\n",
